--- a/playlister/requirements.txt
+++ b/playlister/requirements.txt
@@ -12,12 +12,13 @@ aws-cdk.cx-api==1.200.0
 aws-cdk.region-info==1.200.0
 bandit==1.7.4
 beautifulsoup4==4.11.2
+blinker==1.6.2
 cattrs==22.2.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 check50==3.3.7
-click==8.1.3
+click==8.1.7
 colorgram.py==1.2.0
 constructs==3.4.293
 cryptography==38.0.3
@@ -33,7 +34,7 @@ exceptiongroup==1.1.0
 filelock==3.12.0
 flake8==5.0.4
 flake8-polyfill==1.0.2
-Flask==2.2.3
+Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
@@ -41,6 +42,7 @@ frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.30
 greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.14.0
 idna==3.4
 importlib-resources==5.12.0
@@ -52,7 +54,7 @@ jsii==1.80.0
 lazy-object-proxy==1.9.0
 lib50==3.0.4
 lxml==4.9.2
-MarkupSafe==2.1.2
+MarkupSafe==2.1.3
 mccabe==0.7.0
 multidict==6.0.4
 mypy==1.0.0
@@ -61,7 +63,7 @@ mysql-connector-python==8.0.31
 numpy==1.23.4
 openai==0.27.5
 outcome==1.2.0
-packaging==21.3
+packaging==23.1
 pandas==1.5.3
 pbr==5.11.1
 pep8-naming==0.10.0
@@ -234,6 +236,7 @@ pyparsing==3.0.9
 pyperclip==1.8.2
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.7.1
 PyYAML==5.4.1
 redis==4.5.1
@@ -268,7 +271,7 @@ urllib3==1.26.12
 virtualenv==20.23.0
 visitor==0.1.3
 wcwidth==0.2.6
-Werkzeug==2.2.3
+Werkzeug==2.3.7
 wrapt==1.14.1
 wsproto==1.2.0
 WTForms==3.0.1
