--- a/web-apps/requirements.txt
+++ b/web-apps/requirements.txt
@@ -1,132 +1,130 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.7.1
-asgiref==3.5.2
-astroid==2.14.1
-async-generator==1.10
-async-timeout==4.0.2
-attr==0.3.2
-attrs==22.2.0
-autopep8==2.0.1
-aws-cdk.cloud-assembly-schema==1.200.0
-aws-cdk.core==1.200.0
-aws-cdk.cx-api==1.200.0
-aws-cdk.region-info==1.200.0
-bandit==1.7.4
-beautifulsoup4==4.11.2
-blinker==1.6.2
-bs4==0.0.1
-cachelib==0.9.0
-cattrs==22.2.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-check50==3.3.7
-click==8.1.3
-colorgram.py==1.2.0
-constructs==3.4.293
-cryptography==41.0.7
-dill==0.3.6
-distlib==0.3.6
-Django==4.1.2
-dnspython==2.3.0
-dodgy==0.2.1
-dominate==2.7.0
-email-validator==1.3.1
-exceptiongroup==1.1.0
-filelock==3.12.0
-flake8==5.0.4
-flake8-polyfill==1.0.2
-Flask==2.3.3
-Flask-Caching==2.0.2
-frozenlist==1.3.3
-gitdb==4.0.10
-GitPython==3.1.30
-greenlet==2.0.2
-h11==0.14.0
-httpcore==0.17.3
-idna==3.4
-importlib-resources==5.12.0
-itsdangerous==2.1.2
-jellyfish==0.9.0
-Jinja2==3.1.2
-jsii==1.80.0
-lazy-object-proxy==1.9.0
-lib50==3.0.4
-lxml==4.9.2
-MarkupSafe==2.1.2
-mccabe==0.7.0
-multidict==6.0.4
-mypy==1.0.0
-mypy-extensions==1.0.0
-mysql-connector-python==8.0.31
-numpy==1.23.4
-openai==0.27.5
-outcome==1.2.0
-pandas==1.5.3
-pbr==5.11.1
-pep8-naming==0.10.0
-pexpect==4.8.0
-Pillow==9.4.0
-platformdirs==3.5.0
-poetry-semver==0.1.0
-prettytable==3.6.0
-prospector==1.8.4
-protobuf==3.20.1
-ptyprocess==0.7.0
-publication==0.0.3
-pycodestyle==2.9.1
-pycparser==2.21
-pydocstyle==6.3.0
-pyflakes==2.5.0
-PyJWT==2.6.0
-pylibmc==1.6.3
-pylint==2.16.1
-pylint-celery==0.3
-pylint-django==2.5.3
-pylint-flask==0.6
-pylint-plugin-utils==0.7
-pyparsing==3.0.9
-pyperclip==1.8.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-jsonrpc-server==0.4.0
-pytz==2022.7.1
-redis==4.5.1
-requests==2.31.0
-requirements-detector==1.0.3
-setoptconf-tmp==0.3.1
-six==1.16.0
-smmap==5.0.0
-sniffio==1.3.0
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-spotipy==2.23.0
-SQLAlchemy==1.4.46
-sqlparse==0.4.3
-stevedore==4.1.1
-submit50==3.1.1
-termcolor==1.1.0
-toml==0.10.2
-tomli==2.0.1
-tomlkit==0.11.6
-tqdm==4.65.0
-trio==0.22.0
-trio-websocket==0.9.2
-twilio==7.16.3
-typeguard==2.13.3
-types-requests==2.28.11.12
-types-urllib3==1.26.25.5
-typing_extensions==4.4.0
-ujson==5.8.0
-urllib3==1.26.12
-virtualenv==20.23.0
-visitor==0.1.3
-wcwidth==0.2.6
-Werkzeug==2.3.7
-wrapt==1.14.1
-wsproto==1.2.0
-WTForms==3.0.1
-yarl==1.9.2
+aiohttp>=3.8.4
+aiosignal>=1.3.1
+anyio>=3.7.1
+asgiref>=3.5.2
+astroid>=2.14.1
+async-generator>=1.10
+async-timeout>=4.0.2
+attr>=0.3.2
+attrs>=22.2.0
+aws-cdk.cloud-assembly-schema>=1.200.0
+aws-cdk.core>=1.200.0
+aws-cdk.cx-api>=1.200.0
+aws-cdk.region-info>=1.200.0
+bandit>=1.7.4
+beautifulsoup4>=4.11.2
+blinker>=1.6.2
+bs4>=0.0.1
+cachelib>=0.9.0
+cattrs>=22.2.0
+certifi>=2022.12.7
+cffi>=1.15.1
+charset-normalizer>=2.1.1
+check50>=3.3.7
+click>=8.1.3
+colorgram.py>=1.2.0
+constructs>=3.4.293
+cryptography>=41.0.7
+dill>=0.3.6
+distlib>=0.3.6
+Django>=4.1.2
+dnspython>=2.3.0
+dodgy>=0.2.1
+dominate>=2.7.0
+email-validator>=1.3.1
+exceptiongroup>=1.1.0
+filelock>=3.12.0
+flake8>=5.0.4
+flake8-polyfill>=1.0.2
+Flask>=2.3.3
+Flask-Caching>=2.0.2
+frozenlist>=1.3.3
+gitdb>=4.0.10
+GitPython>=3.1.30
+greenlet>=2.0.2
+h11>=0.14.0
+httpcore>=0.17.3
+idna>=3.4
+importlib-resources>=5.12.0
+itsdangerous>=2.1.2
+jellyfish>=0.9.0
+Jinja2>=3.1.2
+jsii>=1.80.0
+lazy-object-proxy>=1.9.0
+lib50>=3.0.4
+lxml>=4.9.2
+MarkupSafe>=2.1.2
+mccabe>=0.7.0
+multidict>=6.0.4
+mypy>=1.0.0
+mypy-extensions>=1.0.0
+mysql-connector-python>=8.0.31
+numpy>=1.23.4
+openai>=0.27.5
+outcome>=1.2.0
+pandas>=1.5.3
+pbr>=5.11.1
+pep8-naming>=0.10.0
+pexpect>=4.8.0
+Pillow>=9.4.0
+platformdirs>=3.5.0
+poetry-semver>=0.1.0
+prettytable>=3.6.0
+prospector>=1.8.4
+protobuf>=3.20.1
+ptyprocess>=0.7.0
+publication>=0.0.3
+pycparser>=2.21
+pydocstyle>=6.3.0
+pyflakes>=2.5.0
+PyJWT>=2.6.0
+pylibmc>=1.6.3
+pylint>=2.16.1
+pylint-celery>=0.3
+pylint-django>=2.5.3
+pylint-flask>=0.6
+pylint-plugin-utils>=0.7
+pyparsing>=3.0.9
+pyperclip>=1.8.2
+PySocks>=1.7.1
+python-dateutil>=2.8.2
+python-dotenv>=1.0.0
+python-jsonrpc-server>=0.4.0
+pytz>=2022.7.1
+redis>=4.5.1
+requests>=2.31.0
+requirements-detector>=1.0.3
+setoptconf-tmp>=0.3.1
+six>=1.16.0
+smmap>=5.0.0
+sniffio>=1.3.0
+snowballstemmer>=2.2.0
+sortedcontainers>=2.4.0
+soupsieve>=2.4
+spotipy>=2.23.0
+SQLAlchemy>=1.4.46
+sqlparse>=0.4.3
+stevedore>=4.1.1
+submit50>=3.1.1
+termcolor>=1.1.0
+toml>=0.10.2
+tomli>=2.0.1
+tomlkit>=0.11.6
+tqdm>=4.65.0
+trio>=0.22.0
+trio-websocket>=0.9.2
+twilio>=7.16.3
+typeguard>=2.13.3
+types-requests>=2.28.11.12
+types-urllib3>=1.26.25.5
+typing_extensions>=4.4.0
+ujson>=5.8.0
+urllib3>=1.26.12
+virtualenv>=20.23.0
+visitor>=0.1.3
+wcwidth>=0.2.6
+Werkzeug>=2.3.7
+wrapt>=1.14.1
+wsproto>=1.2.0
+WTForms>=3.0.1
+yarl>=1.9.2
